[package]
name = "netns"
version = "0.1.0"
authors = ["inkhare <iapricot@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
libc = { version = "0.2.93", features = [ "extra_traits" ] }

[[example]]
name = "examples"
path = "test.rs"
